aws-eks-deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: fastapi
  name: service-fastapi
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8000
      protocol: TCP
  type: ClusterIP
  selector:
    app.kubernetes.io/name: app-fastapi
