aws-eks-deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: fastapi
  name: ingress-fastapi
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: Hunter-india
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:123456789:certificate/5df5f2ff-6cac-43b3-a321-c34531423112609c2
    alb.ingress.kubernetes.io/load-balancer-attributes: "idle_timeout.timeout_seconds=120"
    alb.ingress.kubernetes.io/actions.cors: >
      {"type":"fixed-response","fixedResponseConfig":{"contentType":"text/plain","statusCode":"200","messageBody":"{\"Access-Control-Allow-Origin\":\"*\",\"Access-Control-Allow-Methods\":\"*\",\"Access-Control-Allow-Headers\":\"Content-Type, multipart/form-data\", \"Access-Control-Allow-Credentials\": \"true\"}"}}

spec:
  ingressClassName: alb
  rules:
    - host: "dev.hunter.com"
      http:
        paths:
        - path: /PATH
          pathType: Prefix
          backend:
            service:
              name: service-fastapi
              port:
                number: 80
